# bitstream

./: .clang-format-include  .clang-tidy  .gitignore  .travis.yml  LICENSE  README.md  meson.build
.github/workflows/: ci.yml
ci/: install-packages.sh  setup-bitstream.sh  unit-tests.sh
include/: bitstream.h  stdbitstream.h
include/stdbitstream/: array.h  list.h  map.h  set.h  string.h  unordered_set.h  vector.h
scripts/: clang-tidy.sh
test/: basic.cpp  meson.build
